# CUDA_liquid_sim

./: CMakeLists.txt  README.md  gen.bat  update.bat
src/: common.cu  common.h  main.cu  mgpcg.cu  mgpcg.h
